--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -15,6 +15,7 @@
     <![endif]-->        
       <link rel="stylesheet" type="text/css" href="css/cleanup.css">
       <link rel="stylesheet" type="text/css" href="css/zxzdesigns.css">
+      <link rel="stylesheet" type="text/css" href="css/icons.css">
       <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 
 
@@ -26,7 +27,7 @@
       <section>
         <h1>Projects</h1>
         <p class="large">
-          All of my projects were developed by using Node.js unless otherwise indicated. My roles in the projects were a graphic designer, an UX designer, & a coder.
+          All of my projects were developed by using Node.js unless otherwise indicated. My roles in the projects were a graphic designer, a UX designer, & a coder.
         </p>
         <div class="center">
           <div class="grid-thirds">
@@ -63,10 +64,10 @@
         <div>
           <ul>
             <li class="title">MISCELANEOUS</li>
-            <li><a href="/">Facebook</a></li>
-            <li><a href="/">Twitter</a></li>
-            <li><a href="/">LinkedIn</a></li>
-            <li><a href="/">Instagram</a></li>
+            <li><a href="https://www.facebook.com/zhenxzheng" target="_blank" class="no-ajaxy">Facebook</a></li>
+            <li><a href="https://twitter.com/zhenxzheng" target="_blank" class="no-ajaxy">Twitter</a></li>
+            <li><a href="https://www.linkedin.com/in/zhenxzheng" target="_blank" class="no-ajaxy">LinkedIn</a></li>
+            <li><a href="http://instagram.com/zhenito" target="_blank" class="no-ajaxy">Instagram</a></li>
           </ul>
         </div>
       </div>
