--- a/public/css/icons.css
+++ b/public/css/icons.css
@@ -7,6 +7,7 @@
 .glyphicon {
   position: relative;
   top: 1px;
+  padding-left:10px;
   display: inline-block;
   font-family: 'Glyphicons Halflings';
   font-style: normal;
