--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,7 +34,9 @@
         <h2 id="designs">Designs</h2>
       </section>
       <div class="nextSection">
-        <span class="glyphicon glyphicon-chevron-down"></span>
+        <a href="javascript:scrollDown()">
+          <span class="glyphicon glyphicon-chevron-down"></span>
+        </a>
       </div>
     </div>
 
@@ -91,10 +93,10 @@
         <div>
           <ul>
             <li class="title">MISCELANEOUS</li>
-            <li><a href="/">Facebook</a></li>
-            <li><a href="/">Twitter</a></li>
-            <li><a href="/">LinkedIn</a></li>
-            <li><a href="/">Instagram</a></li>
+            <li><a href="https://www.facebook.com/zhenxzheng" target="_blank" class="no-ajaxy">Facebook</a></li>
+            <li><a href="https://twitter.com/zhenxzheng" target="_blank" class="no-ajaxy">Twitter</a></li>
+            <li><a href="https://www.linkedin.com/in/zhenxzheng" target="_blank" class="no-ajaxy">LinkedIn</a></li>
+            <li><a href="http://instagram.com/zhenito" target="_blank" class="no-ajaxy">Instagram</a></li>
           </ul>
         </div>
       </div>
