--- a/public/css/zxzdesigns.css
+++ b/public/css/zxzdesigns.css
@@ -7,6 +7,7 @@ body{
 	font-weight:400;
 	width:100%;
 	overflow:hidden !important; /*hides 2nd main*/
+	-webkit-overflow-scrolling:touch;
 }
 h1{
 	font-family:"lato", sans-serif;
