header menu added

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -17,11 +17,16 @@
       <link rel="stylesheet" type="text/css" href="css/zxzdesigns.css">
       <link rel="stylesheet" type="text/css" href="css/icons.css">
       <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-
-
 </head>
 
 <body>
+  <header class="hideHeader">
+    <ul>
+      <li><a href="/home">Home</a></li>
+      <li><a href="/projects">Projects</a></li>
+      <li><a href="/about">About&Contact</a></li>
+    </ul>
+  </header>
   <div id="main" class="about">
     <div class="splash" id="splashAbout">
       <section class="splashTitle">
@@ -101,8 +106,20 @@
       </div>
     </footer>
   </div>
-  
+  <div id="main2"></div>
+ 
+  <!-- jQuery -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
+  <!-- jQuery ScrollTo Plugin -->
+  <script src="//balupton.github.io/jquery-scrollto/lib/jquery-scrollto.js"></script>
+
+  <!-- History.js -->
+  <script src="//browserstate.github.io/history.js/scripts/bundled/html4+html5/jquery.history.js"></script>
+
+  <!-- Ajaxify -->
+  <script src="js/ajaxify.js"></script>
+  <!-- <script src="https://code.jquery.com/jquery.js"></script>-->
   <script src="js/mainscript.js"></script>
   <script src="js/about.js"></script>
 </body>
