--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,6 +20,13 @@
 </head>
 
 <body>
+  <header class="hideHeader">
+    <ul>
+      <li><a href="/home">Home</a></li>
+      <li><a href="/projects">Projects</a></li>
+      <li><a href="/about">About&Contact</a></li>
+    </ul>
+  </header>
   <div id="main" class="home">
     <div class="splash" id="splashHome">
       <section class="splashTitle">
@@ -27,9 +34,9 @@
         <h1>Zheng</h1>
         <span class="line"></span>
         <h2>[Portfolio]</h2> -->
-        <h1 id="zxz">ZXZ</h1>
-        <span class="line"></span>
-        <h2 id="designs">Designs</h2>
+        <h1 id="zxz" class="easeIn">ZXZ</h1>
+        <span class="line cubicBezier"></span>
+        <h2 id="designs" class="easeIn">Designs</h2>
       </section>
       <div class="nextSection">
         <a href="javascript:scrollDown()">
