--- a/public/css/zxzdesigns.css
+++ b/public/css/zxzdesigns.css
@@ -70,8 +70,28 @@ form.container{
 	width:100%;
 	display:inline-block; 
 }
-
-
+header{
+	width:100%;
+	position:fixed;
+	z-index:4;
+}
+header ul{
+	text-align:right;
+	margin:0 2em;
+}
+header ul li{
+	margin-right:10px;
+	display:inline;
+	font-size:12px;
+}
+header ul li a{
+	color:#fff;
+	text-decoration: none;
+	padding:2px 0;
+}
+header ul li a:hover{
+	border-bottom: solid 1px;
+}
 #main,#main2{
 	position:absolute;
 	background:#fff;
@@ -122,6 +142,8 @@ form.container{
 	opacity:0;
 	line-height:.5em;
 	display: inline-block;
+}
+.easeIn{
 	-ms-transition: all 1s ease-in;
 	-webkit-transition: all 1s ease-in;
 	-moz-transition: all 1s ease-in;
@@ -145,11 +167,6 @@ form.container{
 	opacity:0;
 	line-height:1em;
 	display:inline-block;
-	-ms-transition: all 1s ease-in;
-	-webkit-transition: all 1s ease-in;
-	-moz-transition: all 1s ease-in;
-	-o-transition: all 1s ease-in;
-	transition: all 1s ease-in;
 }
 .splash .splashTitle .line{
 	background:#fff;
@@ -158,6 +175,8 @@ form.container{
 	margin:0 auto;
 	width:0;
 	opacity:1;
+}
+.cubicBezier{
 	-ms-transition: all 0.8s cubic-bezier(0,1.5,0.5,1);
 	-webkit-transition: all 0.8s cubic-bezier(0,1.5,0.5,1);
 	-moz-transition: all 0.8s cubic-bezier(0,1.5,0.5,1);
@@ -437,8 +456,23 @@ left: 0;
 	opacity: 1;
 	z-index: 2;
 	overflow: hidden;
-	}
-
+}
+.hideHeader{
+	-ms-transition: all 0.8s ease;
+	-webkit-transition: all 0.8s ease;
+	-moz-transition: all 0.8s ease;
+	-o-transition: all 0.8s ease;
+	transition: all 0.8s ease;
+	top: -100px;
+}
+.showHeader{
+	-ms-transition: all 0.8s ease;
+	-webkit-transition: all 0.8s ease;
+	-moz-transition: all 0.8s ease;
+	-o-transition: all 0.8s ease;
+	transition: all 0.8s ease;
+	top: 0px;
+}
 .innerShadow{
 	-moz-box-shadow:    inset 0 0 10px #000000;
    	-webkit-box-shadow: inset 0 0 10px #000000;
@@ -446,7 +480,7 @@ left: 0;
 }
 .nextSection{
 	position:absolute;
-	bottom:3%;
+	bottom:-10%;
 	left:50%;
 	padding:0 0.5em;
 	color:white;
@@ -454,6 +488,11 @@ left: 0;
 	-moz-transform: translate(-50%, -50%);
 	-ms-transform: translate(-50%, -50%);
 	-o-transform: translate(-50%, -50%);
+	-ms-transition: all 0.8s ease;
+	-webkit-transition: all 0.8s ease;
+	-moz-transition: all 0.8s ease;
+	-o-transition: all 0.8s ease;
+	transition: all 0.8s ease;
 }
 .nextSection a{
 	color:#fff;
