--- a/public/css/zxzdesigns.css
+++ b/public/css/zxzdesigns.css
@@ -1,7 +1,9 @@
+html,body{
+	background-color:#fff;
+}
 body{
 	font-size:100%;
 	line-height: 1.75em;
-	background-color:#fff;
 	color:#222;
 	font-family: "lato", sans-serif;
 	font-weight:400;
