--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -41,14 +41,12 @@
         </p>
         <div class="center">
           <div class="grid-half">
-            <h2>Relevant</h2>
             <p class="small">
               I am interested in technology, and making things simpler and easier in life through technology interests me the most. My goal is to create and design products that will improve our daily problems via clean interfaces and simple interactions. I want to improve what we have right now, and design something better for the future. To complete my specialization in HCI, I opted to take computer science courses to improve my understanding of computer engineering. Therefore, one of my strengths as a designer is the ability to handle both front end and back end aspects of a project.
             </p>
           </div>
 
           <div class="grid-half">
-            <h2>Misc</h2>
             <p class="small">
               Before moving to San Francisco, I lived in a few different places: China for 12 years, Kamehameha Street in Honolulu, Hawaii for 4 months, Los Angeles for 6 years, and San Diego for 6 years. I am fluent in English, Cantonese, Mandarin, and one of the many Chinese Dialects. I am a huge dog-lover. I rescued two amazing dogs from the animal shelter: A Maltese mix named Pookie and a Sharpei mix named Penelope. I am a decent tennis player and an awesome Ping Pong player. I wanted to become a firefighter, so I have a certificate in Fire Protection Technology and I was a Nationally Registered EMT.
             </p>
@@ -96,7 +94,7 @@
         </div>
         <div>
           <ul>
-            <li class="title">MISCELANEOUS</li>
+            <li class="title">MISCELLANEOUS</li>
             <li><a href="https://www.facebook.com/zhenxzheng" target="_blank" class="no-ajaxy">Facebook</a></li>
             <li><a href="https://twitter.com/zhenxzheng" target="_blank" class="no-ajaxy">Twitter</a></li>
             <li><a href="https://www.linkedin.com/in/zhenxzheng" target="_blank" class="no-ajaxy">LinkedIn</a></li>
