--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -30,10 +30,6 @@
   <div id="main" class="home">
     <div class="splash" id="splashHome">
       <section class="splashTitle">
-<!--         <h1>ZhenX</h1>
-        <h1>Zheng</h1>
-        <span class="line"></span>
-        <h2>[Portfolio]</h2> -->
         <h1 id="zxz" class="easeIn">ZXZ</h1>
         <span class="line cubicBezier"></span>
         <h2 id="designs" class="easeIn">Designs</h2>
@@ -97,7 +93,7 @@
         </div>
         <div>
           <ul>
-            <li class="title">MISCELANEOUS</li>
+            <li class="title">MISCELLANEOUS</li>
             <li><a href="https://www.facebook.com/zhenxzheng" target="_blank" class="no-ajaxy">Facebook</a></li>
             <li><a href="https://twitter.com/zhenxzheng" target="_blank" class="no-ajaxy">Twitter</a></li>
             <li><a href="https://www.linkedin.com/in/zhenxzheng" target="_blank" class="no-ajaxy">LinkedIn</a></li>
@@ -122,7 +118,6 @@
   <script src="js/ajaxify.js"></script>
   <!-- <script src="https://code.jquery.com/jquery.js"></script>-->
   <script src="js/mainscript.js"></script>
-  <script src="js/home.js"></script>
   
 </body>
 </html>
