--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -68,7 +68,7 @@
         </div>
         <div>
           <ul>
-            <li class="title">MISCELANEOUS</li>
+            <li class="title">MISCELLANEOUS</li>
             <li><a href="https://www.facebook.com/zhenxzheng" target="_blank" class="no-ajaxy">Facebook</a></li>
             <li><a href="https://twitter.com/zhenxzheng" target="_blank" class="no-ajaxy">Twitter</a></li>
             <li><a href="https://www.linkedin.com/in/zhenxzheng" target="_blank" class="no-ajaxy">LinkedIn</a></li>
