--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
 	<title>ZXZDesigns</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
+	<link rel="icon" type="image/png" href="favicon.ico">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -23,6 +23,7 @@
   <header class="hideHeader">
     <ul>
       <li><a href="/home">Home</a></li>
+      <li><a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy">Resume</a></li>
       <li><a href="/projects">Projects</a></li>
       <li><a href="/about">About&Contact</a></li>
     </ul>
@@ -80,6 +81,9 @@
         </p>
       </section>
     </div>
+    <section class="splash" id="mutt">
+      <p class="centerText"><a class="button" href="http://instagram.com/zhenito" target="_blank" class="no-ajaxy">Instagram</a></p>
+    </section>
     <footer>
       <div>
         <div>
