--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -23,6 +23,7 @@
   <header class="hideHeader">
     <ul>
       <li><a href="/home">Home</a></li>
+      <li><a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy">Resume</a></li>
       <li><a href="/projects">Projects</a></li>
       <li><a href="/about">About&Contact</a></li>
     </ul>
