image ext fixed

--- a/public/css/zxzdesigns.css
+++ b/public/css/zxzdesigns.css
@@ -114,7 +114,7 @@ header ul li a:hover{
 	position:relative;
 }
 #splashHome{
-	background: url("../photo1.jpg");
+	background: url("../photo1.JPG");
 	width:100%;
 	height:100%;
 	background-size:cover;
@@ -126,7 +126,7 @@ header ul li a:hover{
 	background: url("../photo1.jpg");
 }*/
 #mutt{
-	background: url("../photo4.jpg");
+	background: url("../photo4.JPG");
 	width:100%;
 	height:100%;
 	background-size:cover;
