--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
 <head>
 	<title>ZXZDesigns</title>	
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<link rel="icon" type="image/png" href="favicon.ico">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
