--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -5,7 +5,7 @@
 	<title>About Me</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-	
+	<link rel="icon" type="image/png" href="favicon.ico">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -61,15 +61,27 @@
       <section class="contactMe">
         <h1>Contact Me</h1>
         <p class="large">
-          I am currently on vacation, but I am seeking a full time role as a Graphic/UI/UX designer/developer. Please drop a line and say hi :)
+          I am currently on vacation, but I am seeking a full time role as a Graphic / UI / UX designer. Please drop a line and say hi :)
         </p>
+        <div class="center">
+          <div class="grid-half">
+            <p class="large">
+              (323)543-1723<span class="glyphicon glyphicon-phone"></span>
+            </p>
+          </div>
+          <div class="grid-half">
+            <p class="large">
+              <a href="mailto:zhenxzheng@gmail.com" target="_top">zhenxzheng@gmail.com</a><span class="glyphicon glyphicon-envelope"></span>
+            </p>
+          </div>
+        </div>
         <form class="container">
           <div class="center">
             <div class="grid-half">
-              <input type="text" placeholder="Name" id="messageName">
+              <input type="text" placeholder="Your Name" id="messageName">
             </div>
             <div class="grid-half">
-              <input type="text" placeholder="E-mail" id="messageEmail">
+              <input type="text" placeholder="Your E-mail" id="messageEmail">
             </div>
           </div>
           <div class="center">
