--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -5,6 +5,7 @@
 	<title>Projects</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <link rel="icon" type="image/png" href="favicon.ico">
 	
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -37,21 +38,20 @@
         </p>
         <div class="center">
           <div class="grid-thirds">
-            <img src="{{projects.0.preview}}" id="{{projects.0.id}}">
-            <img src="{{projects.1.preview}}" id="{{projects.1.id}}">
-
+            <a href="/projects/{{projects.0.url}}"><img src="{{projects.0.preview}}" id="{{projects.0.id}}"></a>
+            <a href="/projects/{{projects.1.url}}"><img src="{{projects.1.preview}}" id="{{projects.1.id}}"></a>
           </div>
 
           <div class="grid-thirds">
-            <img src="{{projects.2.preview}}" id="{{projects.2.id}}">
-            <img src="{{projects.3.preview}}" id="{{projects.3.id}}">
-            <img src="{{projects.4.preview}}" id="{{projects.4.id}}">
+            <a href="/projects/{{projects.2.url}}"><img src="{{projects.2.preview}}" id="{{projects.2.id}}"></a>
+            <a href="/projects/{{projects.3.url}}"><img src="{{projects.3.preview}}" id="{{projects.3.id}}"></a>
+            <a href="/projects/{{projects.4.url}}"><img src="{{projects.4.preview}}" id="{{projects.4.id}}"></a>
           </div>
+
           <div class="grid-thirds">
-            <img src="{{projects.5.preview}}" id="{{projects.5.id}}">
-            <img src="{{projects.6.preview}}" id="{{projects.6.id}}">
-            <img src="{{projects.7.preview}}" id="{{projects.7.id}}">
-            
+            <a href="/projects/{{projects.5.url}}"><img src="{{projects.5.preview}}" id="{{projects.5.id}}"></a>
+            <a href="/projects/{{projects.6.url}}"><img src="{{projects.6.preview}}" id="{{projects.6.id}}"></a>
+            <a href="/projects/{{projects.7.url}}"><img src="{{projects.7.preview}}" id="{{projects.7.id}}"></a>
           </div>
         </div>
       </section>
